#1757 Fix opentaps address validation JS/CSS so that the popup does not get stuck when changing the zip code during the expand/collapse animation.
Fix opentaps expandCollapse function to avoid concurrent running animations.
If the expand/collapse method was called while a previous call animation was still running, then two conflicting animation would be running resulting in a corrupted state.

--- a/opentaps/opentaps-common/webapp/css/opentaps.css
+++ b/opentaps/opentaps-common/webapp/css/opentaps.css
@@ -3681,7 +3681,7 @@ div.postalAddressValidationError {
     padding: 5px 5px 5px 20px !important;
     margin-top: 5px;
     margin-bottom: 15px;
-    width: 250px;
+    width: 280px;
     color: #333333;
     overflow: auto;
 }
@@ -3695,7 +3695,7 @@ div.postalAddressValidationError div.data {
 }
 div.postalAddressValidationError div.links {
     float: right;
-    width: 25px;
+    width: 35px;
     margin-bottom: 1.5em;
 }
 div.postalAddressValidationError div.links img {
